[tool.poetry]
name = "pano-selenium"
version = "0.1.0"
description = ""
authors = ["Michael Coxe <mcoxe@server.internal>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
